Column layout module overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,7 +164,6 @@ li {
   padding: 0;
   position: relative;
   z-index: 5;
-  overflow: hidden;
 }
 .two-column-layout__row,
 .special-column-layout__row {
