--- a/assets/sass/layout/_column-layout.scss
+++ b/assets/sass/layout/_column-layout.scss
@@ -29,7 +29,6 @@
         padding: 0;
         position: relative;
         z-index: 5;
-        overflow: hidden;
     }
 
     &__row {
